--- a/stov/client/src/App.css
+++ b/stov/client/src/App.css
@@ -15,4 +15,49 @@
   /* border: 1px solid #d6d9dc; */
   padding: 24px;
   box-sizing: border-box;
+  display: flex;
+  justify-content: space-evenly;
 }
+
+.home-mainbar{
+  margin-top: 25px;
+  width: 75%;
+}
+
+.home-mainbar div:first-child{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.home-mainbar div:first-child button{
+  margin: 10px;
+  padding: 0 10px 0 10px;
+  background-color: #009dff;
+  border: solid #009dff;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.2s;
+  font-size: 12px;
+  font-weight: 500;
+  height: 38px;
+}
+
+.home-mainbar>div>p{
+  font-size: 25px;
+}
+
+.questions-container{
+  background-color: #fdf7e2;
+}
+
+.question{
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+  border-bottom: solid 1px rgb(233, 232, 231);
+}
+
