--- a/stov/client/src/components/RightSidebar/RightSidebar.css
+++ b/stov/client/src/components/RightSidebar/RightSidebar.css
@@ -1,5 +1,6 @@
 .right-sidebar{
     margin: 50px;
+    margin-left: 25px;
     margin-top: 40px;
     width: 280px;
     float: right;
@@ -55,7 +56,7 @@
     color: #497fa5;
     width: fit-content;
     min-height: 20px;
-    padding: 0 5px 0 5px;
+    padding: 1px 5px 1px 5px;
     border: thin #e1ecf4;
     border-radius: 5px;
     display: flex;
