--- a/stov/client/src/components/Navbar/navbar.css
+++ b/stov/client/src/components/Navbar/navbar.css
@@ -23,7 +23,8 @@
 }
 
 .nav-logo{
-    padding: 5px 25px;
+    padding: 10px 0 10px 0;
+    margin-left: 27px;
 }
 
 .nav-item{
@@ -41,7 +42,7 @@
     padding: 10px 20px;
 }
 
-.nav-item:hover{
+.nav-item:hover, .nav-logo:hover{
     background-color: rgb(226,226,226);
 }
 
