--- a/stov/client/src/components/Questions/AskQuestions/questions.css
+++ b/stov/client/src/components/Questions/AskQuestions/questions.css
@@ -1,13 +1,10 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+
 .q-container{
     margin-top: 100px;
     margin-left: 100px ;
 }
 
-.heading{
+.q-container .heading{
     padding: 0;
     font-weight: 500;
     font-size: 25px;
