--- a/stov/client/src/components/Questions/displayQ.css
+++ b/stov/client/src/components/Questions/displayQ.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 50px 50px 10px 30px;
+    margin: 50px 50px 10px 20px;
     padding: 0;
   }
 
@@ -21,6 +21,77 @@
     text-align: justify;
 }
 
+.question-info{
+    margin-left: 20px;
+    border-bottom: solid  1px rgba(0, 0, 0, 0.2);
+}
+
 .display-container{
     display: block;
+}
+.question-details-block .row-1{
+    display: flex;
+    width: 70%;
+}
+
+.question-votes{
+    margin: 10px 10px 10px 20px;
+}
+
+
+.question-votes div button{
+    background: transparent;
+    border: solid 1px rgb(173, 172, 172);
+    height: 50px;
+    width: 50px;
+    border-radius: 25px;
+    margin: 5px 0 5px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.question-votes button img{
+    height: 30px;
+}
+
+.question-details-block div button:hover{
+    background-color: rgb(232, 232, 232);
+    cursor: pointer;
+}
+.question-details-block p{
+    font-size: 17px;
+}
+
+.answer-block{
+    margin-left: 20px;
+    width: 70%;
+}
+.answer-block div{
+    border: none;
+    margin: 0;
+    border-radius: 0;
+}
+.answer-block textarea{
+    margin: 0;
+    padding: 0;
+    margin-bottom: 15px;
+    padding-left: 5px;
+    padding-top: 5px ;
+}
+
+.post-by{
+    float: right;
+    color: #2680c0;
+    background-color: #e1ecf4;
+    font-size: 14px;
+    margin-right:29% ;
+    margin-bottom: 20px;
+    padding: 10px;
+    border: solid 1px #e1ecf4;
+    border-radius: 5px;
+    
+}
+.post-by span{
+    color: grey;
+    font-size: 12px;
 }
