--- a/stov/client/src/components/Questions/displayQ.css
+++ b/stov/client/src/components/Questions/displayQ.css
@@ -81,7 +81,6 @@
 
 .post-by{
     float: right;
-    color: #2680c0;
     background-color: #e1ecf4;
     font-size: 14px;
     margin-right:29% ;
@@ -89,9 +88,34 @@
     padding: 10px;
     border: solid 1px #e1ecf4;
     border-radius: 5px;
-    
+}
+
+a{
+    text-decoration: none;
+    color: #2680c0;
 }
 .post-by span{
     color: grey;
     font-size: 12px;
+}
+
+.answers-section{
+    margin-left: 20px;
+}
+
+.answer-n > div{
+    margin: 10px 0 10px 0;
+    padding: 10px;
+    border-bottom: solid 1px rgb(189, 187, 187);
+    width: 70%;
+    display: flex;
+}
+
+.answer-body{
+    padding: 10px;
+    width: 82%;
+}
+.answer-on span{
+    font-size: 13px;
+    color: grey;
 }
