--- a/stov/client/src/components/Home/questions.css
+++ b/stov/client/src/components/Home/questions.css
@@ -89,3 +89,9 @@ p.votes{
     text-decoration: none;
     color: #1174bb;
 }
+
+@media (max-width:700px){
+    .tag-time{
+        display: block;
+    }
+}
