--- a/stov/client/src/components/Navbar/navbar.css
+++ b/stov/client/src/components/Navbar/navbar.css
@@ -22,6 +22,9 @@
     justify-content: space-between;
 }
 
+.open-burger,.close-burger,.nav-burger-list,.nav-burger{
+    display: none;
+}
 .nav-logo{
     padding: 10px 0 10px 0;
     margin-left: 27px;
@@ -77,4 +80,58 @@
 
 .nav-links:hover{
     background-color: #d3e4eb;
+}
+
+@media (max-width:700px) {
+    .nav-btn{
+        display: none;
+    }
+    .search-bar{
+        display:none;
+    }
+    .nav-burger{
+        margin-left:10px;
+        background:transparent;
+        border: none;
+    }
+    .open-burger{
+        display: block;
+    }
+    .nav-burger-list{
+        margin-top: 55px;
+        list-style-type: none;
+        margin-left: 0;
+        padding: 0;
+        box-shadow: 1px 1px 5px #00000033;
+        background-color: whitesmoke;
+        width: 50%;
+    }
+    .nav-burger-list li{
+        width: 100%;
+        height:50px;
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        
+    }
+    .nav-burger-list li a{
+        background: whitesmoke;
+        width: 100%;
+        padding: 10px 10px 10px 20px;
+        font-size: 20px;
+        border: none;
+    }
+    .nav-burger-list li a:hover{
+        background-color: rgb(195, 191, 191);
+        cursor: pointer;
+    }
+    .nav-burger img{
+        height: 30px;
+    }
+    .nav-logo{
+        margin-left:10px;
+    }
+    .nav-links{
+        margin-right: 12px;
+    }
 }
